# aide-base

./: .gitignore  Cargo.toml  README.md  docker-compose.dev.yaml
src/: main.rs  state.rs
src/docs/: extractors.rs  index.html  mod.rs
src/docs/static/: index.html
src/routers/: mod.rs
src/routers/todos/: mod.rs  routes.rs
