[package]
name = "base-backend"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]


# External
aide = { version = "0.13.1", features = [
    "redoc",
    "axum",
    "axum-extra",
    "macros",
]}
async-trait = "0.1.77"
axum = { version = "0.7.4", features = ["macros", "ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
axum-jsonschema = { version = "0.8.0", features = [
    "aide",
] }
axum-macros = "0.4.0"
schemars = { version = "0.8.10", features = ["uuid1"] }
serde = { version = "1.0.195", features = ["derive", "rc"] }
serde_json = "1.0.111"
tokio = { version = "1.21.0", features = ["full"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }

dotenvy = "0.15"
log = "0.4"
env_logger = "0.11.0"
tracing = "0.1.40"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
headers = "0.4.0"
tracing-subscriber = "0.3.18"
futures = "0.3.29"
once_cell = "1.19.0"
hyper = "1.1.0"

